test/cli/subprocess-plugin/subprocess-plugin.out
------ Arguments passed to plugin
------ Extra arguments for Ruby
------ Multi file generated code
------ Multi file symbol table
------ Bad plugin output on single file
test/cli/subprocess-plugin/trigger_bad_plugin.rb//plugin-generated|0:2: Parse Error: unexpected token: syntax error https://sorbet.org/docs/error-reference#2001
     2 |end end end end
            ^^^
Errors: 1
------ Bad plugin output on many files
test/cli/subprocess-plugin/trigger_bad_plugin.rb//plugin-generated|0:2: Parse Error: unexpected token: syntax error https://sorbet.org/docs/error-reference#2001
